Added CrimeChart to InfoArea

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,6 +3,9 @@
     display: flex; 
     flex-direction: column;
     background-color: lightblue;
+    top: 0px;
+    left: 0px;
+    position: sticky;
 }
 
 .navbar-icon {
