--- a/src/components/InfoArea.css
+++ b/src/components/InfoArea.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     background-color: #f5f5f5;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
-    padding: 10px;
+    padding: 20px;
     box-sizing: border-box;
     width: 50vw;
+    height: 100vh;
 }
