--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 #root {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
 }
@@ -9,6 +10,6 @@ body {
 
 .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: row;    
     height: 100vh;
 }
